# image-metadata-lab

./: .gitignore  README.md  pyproject.toml
notebooks/: 01-notebook.ipynb
src/image_metadata_lab/: __init__.py  cli.py  exif_reader.py  image_ops.py  report_generator.py
